Update footer text with copyright information
Added a copyright notice for iPad in the footer.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </main>
 
         <footer>
-            <p>Draw each character and click "Download Font" when ready. Your custom font will be saved as a .ttf file.</p>
+            <p>Draw each character and click "Download Font" when ready. Your custom font will be saved as a .ttf file. iPad is a registered copyright of Apple inc., used for educational use (this project teaches me how to code)</p>
         </footer>
     </div>
 
